✅ Feat: Created first interactive component

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
+import AstroHearth from '../components/AstroHearth.astro';
 ---
 
 <Layout title="Interactive Rating Component Page | Frontend Mentor">
@@ -32,6 +33,10 @@ import Card from '../components/Card.astro';
 				body="Come say hi to our amazing Discord community. ❤️"
 			/>
 		</ul>
+		<a href="/interactive-rating-component/about">
+			to about
+		</a>
+		<AstroHearth></AstroHearth>
 	</main>
 </Layout>
 
