--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,41 +2,35 @@
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 import AstroHearth from '../components/AstroHearth.astro';
+import VotingCard from '../components/VotingCard.astro';
 ---
 
 <Layout title="Interactive Rating Component Page | Frontend Mentor">
-	<main>
-		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
-		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
-		</p>
-		<ul role="list" class="link-card-grid">
-			<Card
-				href="https://docs.astro.build/"
-				title="Documentation"
-				body="Learn how Astro works and explore the official API docs."
-			/>
-			<Card
-				href="https://astro.build/integrations/"
-				title="Integrations"
-				body="Supercharge your project with new frameworks and libraries."
-			/>
-			<Card
-				href="https://astro.build/themes/"
-				title="Themes"
-				body="Explore a galaxy of community-built starter themes."
-			/>
-			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
-			/>
-		</ul>
-		<a href="/interactive-rating-component/about">
-			to about
-		</a>
-		<AstroHearth></AstroHearth>
+	<main class="h-full rounded-xl flex flex-col justify-center">
+		<VotingCard />
+		  <!-- Rating state start -->
+
+		  How did we do?
+
+		  Please let us know how we did with your support request. All feedback is appreciated 
+		  to help us improve our offering!
+		
+		  1 2 3 4 5
+		
+		  Submit
+		
+		  <!-- Rating state end -->
+		
+		  <!-- Thank you state start -->
+		
+		  You selected <!-- Add rating here --> out of 5
+		
+		  Thank you!
+		
+		  We appreciate you taking the time to give a rating. If you ever need more support, 
+		  don’t hesitate to get in touch!
+		
+		  <!-- Thank you state end -->
 	</main>
 </Layout>
 
