🛠 Fix: Fixed buttons sizing

--- a/src/components/VotingCard.astro
+++ b/src/components/VotingCard.astro
@@ -1,28 +1,28 @@
-<voting-card class="relative">
+<voting-card class="relative max-w-[443px]">
    <div class="p-6 rounded-xl bg-[radial-gradient(circle_at_top,_var(--tw-gradient-stops))] from-[#222933] to-[#171e28] flex flex-col" id="voting-card">
       <div class="p-3 bg-darkBlue w-max rounded-full">
          <img src="./icon-star.svg" alt="">
       </div>
-      <h2 class="text-white text-3xl py-6">How did we do</h2>
+      <h2 class="text-white text-3xl py-6">How did we do?</h2>
       <p class="text-lightGray">
          Please let us know how we did with your support request. All feedback is appreciated 
          to help us improve our offering!
       </p>
       <form novalidate>
-         <div class="flex flex-row gap-4 self-center py-6">
-            <button class="py-2 px-4 text-lightGray bg-darkBlue rounded-full hover:bg-orange hover:text-white">
+         <div class="flex flex-row gap-4 self-center py-6 justify-center flex-wrap space-x-2">
+            <button class="py-4 px-6 text-lightGray bg-darkBlue rounded-full hover:bg-orange hover:text-white">
                <p>1</p>
             </button>
-            <button class="py-2 px-4 text-lightGray bg-darkBlue rounded-full hover:bg-orange hover:text-white">
+            <button class="py-4 px-6 text-lightGray bg-darkBlue rounded-full hover:bg-orange hover:text-white">
                <p>2</p>
             </button>
-            <button class="py-2 px-4 text-lightGray bg-darkBlue rounded-full hover:bg-orange hover:text-white">
+            <button class="py-4 px-6 text-lightGray bg-darkBlue rounded-full hover:bg-orange hover:text-white">
                <p>3</p>
             </button>
-            <button class="py-2 px-4 text-lightGray bg-darkBlue rounded-full hover:bg-orange hover:text-white">
+            <button class="py-4 px-6 text-lightGray bg-darkBlue rounded-full hover:bg-orange hover:text-white">
                <p>4</p>
             </button>
-            <button class="py-2 px-4 text-lightGray bg-darkBlue rounded-full hover:bg-orange hover:text-white">
+            <button class="py-4 px-6 text-lightGray bg-darkBlue rounded-full hover:bg-orange hover:text-white">
                <p>5</p>
             </button>
             <input type="text" class="hidden" name="vote" id="vote-value" value="">
@@ -78,7 +78,7 @@
       submitBtn?.addEventListener('click', event => {
          event.preventDefault();
          const res = `You selected ${currentVote?.value} of 5`
-         
+
          switch (currentVote!.value) {
             case "":
                console.log("Please select a Vote!");
