🛠 Fix: Fixed main size

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import VotingCard from '../components/VotingCard.astro';
 ---
 
 <Layout title="Interactive Rating Component Page | Frontend Mentor">
-	<main class="h-full rounded-xl flex flex-col justify-center">
+	<main class="h-full rounded-xl flex flex-col justify-center w-max">
 		<VotingCard />
 	</main>
 </Layout>
