--- a/src/components/VotingCard.astro
+++ b/src/components/VotingCard.astro
@@ -9,20 +9,20 @@
          to help us improve our offering!
       </p>
       <form novalidate>
-         <div class="flex flex-row gap-4 self-center py-6 justify-center flex-wrap space-x-2">
-            <button class="py-4 px-6 text-lightGray bg-darkBlue rounded-full hover:bg-orange hover:text-white">
+         <div class="flex flex-row gap-4 self-center py-6 justify-center flex-wrap lg:space-x-2">
+            <button class="py-2 px-4 md:py-4 md:px-6 text-lightGray bg-darkBlue rounded-full hover:bg-orange hover:text-white">
                <p>1</p>
             </button>
-            <button class="py-4 px-6 text-lightGray bg-darkBlue rounded-full hover:bg-orange hover:text-white">
+            <button class="py-2 px-4 md:py-4 md:px-6 text-lightGray bg-darkBlue rounded-full hover:bg-orange hover:text-white">
                <p>2</p>
             </button>
-            <button class="py-4 px-6 text-lightGray bg-darkBlue rounded-full hover:bg-orange hover:text-white">
+            <button class="py-2 px-4 md:py-4 md:px-6 text-lightGray bg-darkBlue rounded-full hover:bg-orange hover:text-white">
                <p>3</p>
             </button>
-            <button class="py-4 px-6 text-lightGray bg-darkBlue rounded-full hover:bg-orange hover:text-white">
+            <button class="py-2 px-4 md:py-4 md:px-6 text-lightGray bg-darkBlue rounded-full hover:bg-orange hover:text-white">
                <p>4</p>
             </button>
-            <button class="py-4 px-6 text-lightGray bg-darkBlue rounded-full hover:bg-orange hover:text-white">
+            <button class="py-2 px-4 md:py-4 md:px-6 text-lightGray bg-darkBlue rounded-full hover:bg-orange hover:text-white">
                <p>5</p>
             </button>
             <input type="text" class="hidden" name="vote" id="vote-value" value="">
